--- a/Alli-1a1.html
+++ b/Alli-1a1.html
@@ -281,10 +281,10 @@ $(document).ready(function () {
 <h2><span style="color: blue;">苦槠-柯-青冈群团</span></h2>
 </div>
 <div
-id="castanopsis-sclerophylla---lithocarpus-glaber---quercus-cyclobalanopsis-glauca-all."
+id="castanopsis-sclerophylla-lithocarpus-glaber-quercus-cyclobalanopsis-glauca-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis sclerophylla</em> -
-<em>Lithocarpus glaber</em> - <em>Quercus</em>
+<h2><span style="color: darkblue;"><em>Castanopsis
+sclerophylla</em>-<em>Lithocarpus glaber</em>-<em>Quercus</em>
 (<em>Cyclobalanopsis</em>) <em>glauca</em> All.</span></h2>
 <p><img src="Pictures/5(1)-1%20%E5%A4%A7%E9%87%91%E5%B1%B1%E5%B8%B8%E7%BB%BF%E9%98%94%E5%8F%B6%E6%9E%97%E5%A4%96%E8%B2%8C.JPG" /></p>
 <center>
