--- a/Alli-1a10.html
+++ b/Alli-1a10.html
@@ -280,10 +280,10 @@ $(document).ready(function () {
 <div id="甜槠-细柄蕈树群团" class="section level2">
 <h2><span style="color: blue;">甜槠-细柄蕈树群团</span></h2>
 </div>
-<div id="castanopsis-eyrei---liquidambar-altingia-gracilipes-all."
+<div id="castanopsis-eyrei-liquidambar-altingia-gracilipes-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis eyrei</em> -
-<em>Liquidambar</em> (<em>Altingia</em>) <em>gracilipes</em>
+<h2><span style="color: darkblue;"><em>Castanopsis
+eyrei</em>-<em>Liquidambar</em> (<em>Altingia</em>) <em>gracilipes</em>
 All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
