--- a/Alli-1a12.html
+++ b/Alli-1a12.html
@@ -292,7 +292,7 @@ All.</span></h2>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：红楠（<em>Machilus
+<li><p>乔木层：钩锥（<em>Castanopsis tibetana</em>）、红楠（<em>Machilus
 thunbergii</em>）、赤杨叶（<em>Alniphyllum
 fortunei</em>）、猴欢喜（<em>Sloanea sinensis</em>）、鼠刺(<em>Itea
 chinensis</em>)</p></li>
