--- a/Alli-1a13.html
+++ b/Alli-1a13.html
@@ -280,10 +280,10 @@ $(document).ready(function () {
 <div id="毛锥-鹿角锥-罗浮锥群团" class="section level2">
 <h2><span style="color: blue;">毛锥-鹿角锥-罗浮锥群团</span></h2>
 </div>
-<div id="castanopsis-fordii---c.-lamontii---c.-fabri-all."
+<div id="castanopsis-fordii-c.-lamontii-c.-fabri-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis fordii</em> - <em>C.
-lamontii</em> - <em>C. fabri</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Castanopsis fordii</em>-<em>C.
+lamontii</em>-<em>C. fabri</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
