--- a/Alli-1a14.html
+++ b/Alli-1a14.html
@@ -281,11 +281,11 @@ $(document).ready(function () {
 <h2><span style="color: blue;">四川大头茶-栲-湖北锥群团</span></h2>
 </div>
 <div
-id="polyspora-speciosa---castanopsis-fargesii---castanopsis-hupehensis-all."
+id="polyspora-speciosa-castanopsis-fargesii-castanopsis-hupehensis-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Polyspora speciosa</em> -
-<em>Castanopsis fargesii</em> - <em>Castanopsis hupehensis</em>
-All.</span></h2>
+<h2><span style="color: darkblue;"><em>Polyspora
+speciosa</em>-<em>Castanopsis fargesii</em>-<em>Castanopsis
+hupehensis</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
