--- a/Alli-1a15.html
+++ b/Alli-1a15.html
@@ -280,11 +280,10 @@ $(document).ready(function () {
 <div id="中华木荷-钝齿木荷-扁刺锥群团" class="section level2">
 <h2><span style="color: blue;">中华木荷-钝齿木荷-扁刺锥群团</span></h2>
 </div>
-<div
-id="schima-sinensis---schima-crenata---castanopsis-platycantha-all."
+<div id="schima-sinensis-schima-crenata-castanopsis-platycantha-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Schima sinensis</em> - <em>Schima
-crenata</em> - <em>Castanopsis platycantha</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Schima sinensis</em>-<em>Schima
+crenata</em>-<em>Castanopsis platycantha</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
@@ -299,8 +298,8 @@ crenata</em>）、中华木荷（<em>Schima sinensis</em>）</p>
 gracilis</em>）、硬壳柯（<em>Lithocarpus
 hancei</em>）、米心水青冈（<em>Fagus
 engleriana</em>）、灯台树（<em>Bothrocaryum
-controversum</em>），长瓣短柱茶（<em>Camellia
-grijsii</em>），大叶新木姜子（<em>Neolitsea levinei</em>）</p></li>
+controversum</em>）、长瓣短柱茶（<em>Camellia
+grijsii</em>）、大叶新木姜子（<em>Neolitsea levinei</em>）</p></li>
 <li><p>灌木层：山矾（<em>Symplocos
 sumuntia</em>）、西南红山茶（<em>Camellia
 pitardii</em>）、长瓣短柱茶（<em>Camellia grijsii</em>）
@@ -308,7 +307,7 @@ pitardii</em>）、长瓣短柱茶（<em>Camellia grijsii</em>）
 tumidinoda</em>）</p></li>
 <li><p>草本层：鳞轴短肠蕨（<em>Allantodia
 hirtipes</em>）、高山肺形草（<em>Tripterospermum
-cordifolium</em>）、堇菜一种（<em>Viola spp.</em>）</p></li>
+cordifolium</em>）、堇菜属（<em>Viola spp.</em>）</p></li>
 <li><p>藤本植物：葡萄叶猕猴桃（<em>Actinidia
 vitifolia</em>）、棠叶悬钩子（<em>Rubus malifolius</em>）</p></li>
 </ul>
