--- a/Alli-1a16.html
+++ b/Alli-1a16.html
@@ -280,15 +280,15 @@ $(document).ready(function () {
 <div id="天竺桂-红楠群团" class="section level2">
 <h2><span style="color: blue;">天竺桂-红楠群团</span></h2>
 </div>
-<div id="cinnamomum-japonicum---machilus-thunbergii-all."
+<div id="cinnamomum-japonicum-machilus-thunbergii-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Cinnamomum japonicum</em> -
-<em>Machilus thunbergii</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Cinnamomum
+japonicum</em>-<em>Machilus thunbergii</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
 <p>红楠（<em>Machilus thunbergii</em>）、樟属树种（<em>Cinnamomum
-comphora</em>，<em>C. japonicum</em>, <em>C.
+comphora</em>、<em>C. japonicum</em>、<em>C.
 subavenium</em>），其中樟树多为人工栽种</p>
 <p><br></p>
 </div>
