--- a/Alli-1a17.html
+++ b/Alli-1a17.html
@@ -280,10 +280,10 @@ $(document).ready(function () {
 <div id="紫楠-薄叶润楠群团" class="section level2">
 <h2><span style="color: blue;">紫楠-薄叶润楠群团</span></h2>
 </div>
-<div id="phoebe-sheareri---machilus-leptophylla-all."
+<div id="phoebe-sheareri-machilus-leptophylla-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Phoebe sheareri</em> -
-<em>Machilus leptophylla</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Phoebe sheareri</em>-<em>Machilus
+leptophylla</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
