--- a/Alli-1a18.html
+++ b/Alli-1a18.html
@@ -280,9 +280,9 @@ $(document).ready(function () {
 <div id="闽楠-刨花润楠群团" class="section level2">
 <h2><span style="color: blue;">闽楠-刨花润楠群团</span></h2>
 </div>
-<div id="phoebe-bournei---machilus-pauhoi-all." class="section level2">
-<h2><span style="color: darkblue;"><em>Phoebe bournei</em> -
-<em>Machilus pauhoi</em> All.</span></h2>
+<div id="phoebe-bournei-machilus-pauhoi-all." class="section level2">
+<h2><span style="color: darkblue;"><em>Phoebe bournei</em>-<em>Machilus
+pauhoi</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
