--- a/Alli-1a2.html
+++ b/Alli-1a2.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Alli-1a2.knit</title>
+<title> </title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -272,6 +272,7 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore"> </h1>
 
 </div>
 
@@ -280,10 +281,10 @@ $(document).ready(function () {
 <h2><span style="color: blue;">赤皮青冈-小叶青冈群团</span></h2>
 </div>
 <div
-id="quercus-cyclobalanopsis-gilva---q.-cyclobalanopsis-myrsinaefolia-all."
+id="quercus-cyclobalanopsis-gilva-q.-cyclobalanopsis-myrsinaefolia-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>gilva</em> - <em>Q.</em>
+(<em>Cyclobalanopsis</em>) <em>gilva</em>-<em>Q.</em>
 (<em>Cyclobalanopsis</em>) <em>myrsinaefolia</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
