--- a/Alli-1a20.html
+++ b/Alli-1a20.html
@@ -281,10 +281,10 @@ $(document).ready(function () {
 <h2><span
 style="color: blue;">利川润楠-宜昌润楠-竹叶润楠群团</span></h2>
 </div>
-<div id="machilus-lichuanensis---m.-ichangensis---phoebe-fabrei-all."
+<div id="machilus-lichuanensis-m.-ichangensis-phoebe-fabrei-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Machilus lichuanensis</em> -
-<em>M. ichangensis</em> - <em>Phoebe fabrei</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Machilus lichuanensis</em>-<em>M.
+ichangensis</em>-<em>Phoebe fabrei</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
