--- a/Alli-1a21.html
+++ b/Alli-1a21.html
@@ -280,8 +280,8 @@ $(document).ready(function () {
 <div id="细叶楠-楠木群团" class="section level2">
 <h2><span style="color: blue;">细叶楠-楠木群团</span></h2>
 </div>
-<div id="phoebe-hui---p.-zhennan-all." class="section level2">
-<h2><span style="color: darkblue;"><em>Phoebe hui</em> - <em>P.
+<div id="phoebe-hui-p.-zhennan-all." class="section level2">
+<h2><span style="color: darkblue;"><em>Phoebe hui</em>-<em>P.
 zhennan</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
@@ -298,13 +298,13 @@ henryi</em>）、大叶柯（<em>Lithocarpus
 megalophyllus</em>）、大果冬青（<em>Ilex
 macrocarpa</em>）、白楠（<em>Phoebe neurantha</em>）、灯台树（<em>Cornus
 controversa</em>）、黑壳楠（<em>Lindera magaphylla</em>）</p></li>
-<li><p>灌木层：方竹（<em>Chimonobambusa</em>
-sp.）、长尾毛蕊茶（<em>Camellia caudata</em>）</p></li>
+<li><p>灌木层：方竹（<em>Chimonobambusa
+spp.</em>）、长尾毛蕊茶（<em>Camellia caudata</em>）</p></li>
 <li><p>草本层：华南复叶耳蕨（<em>Arachniodes
 festina</em>）半边铁角蕨（<em>Asplenium
 unilaterale</em>）、楼梯草（<em>Elatostema</em> sp.）</p></li>
-<li><p>藤本植物：多种铁线莲（<em>Clematis</em>
-spp.），槲蕨（<em>Drynaria</em> sp.）、川山橙（<em>Melodinus
+<li><p>藤本植物：多种铁线莲（<em>Clematis
+spp.</em>），槲蕨（<em>Drynaria spp.</em>）、川山橙（<em>Melodinus
 hemsleyanus</em>）</p></li>
 </ul>
 <p><br></p>
@@ -312,7 +312,7 @@ hemsleyanus</em>）</p></li>
 <div id="目前包含2个群落" class="section level3">
 <h3>目前包含2个群落</h3>
 <ul>
-<li><p>(C1）方竹-尖叶榕/楠木群落（<em>Chimonobambusa</em> sp.- <em>Ficus
+<li><p>(C1）方竹-尖叶榕/楠木群落（<em>Chimonobambusa spp.</em>-<em>Ficus
 henryi</em>/<em>Phoebe zhennan</em> Comm.）</p>
 <p>分布在峨眉山（EBLF书中表5-114；曾称：方竹-尖叶榕/楠木群落)</p></li>
 <li><p>(C2）大果冬青/白楠-细叶楠群落（<em>Ilex
