--- a/Alli-1a22.html
+++ b/Alli-1a22.html
@@ -280,17 +280,16 @@ $(document).ready(function () {
 <div id="山润楠-油樟-银叶桂群团" class="section level2">
 <h2><span style="color: blue;">山润楠-油樟-银叶桂群团</span></h2>
 </div>
-<div
-id="machilus-montana---cinnamomum-longipaniculatum---c.-mairei-all."
+<div id="machilus-montana-cinnamomum-longipaniculatum-c.-mairei-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Machilus montana</em> -
-<em>Cinnamomum longipaniculatum</em> - <em>C. mairei</em>
+<h2><span style="color: darkblue;"><em>Machilus
+montana</em>-<em>Cinnamomum longipaniculatum</em>-<em>C. mairei</em>
 All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
 <p>山楠（<em>Phoebe chinensis</em>）、油樟(<em>Cinnamomum
-longepaniculatum</em>)、银叶桂(<em>C. mairei</em>)</p>
+longepaniculatum</em>)、银叶桂(<em>Cinnamomum mairei</em>)</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
