--- a/Alli-1a23.html
+++ b/Alli-1a23.html
@@ -281,11 +281,11 @@ $(document).ready(function () {
 <h2><span style="color: blue;">元江锥-滇青冈群团</span></h2>
 </div>
 <div
-id="castanopsis-orthacantha---quercus-cyclobalanopsis-schottkyana-all."
+id="castanopsis-orthacantha-quercus-cyclobalanopsis-schottkyana-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis orthacantha</em> -
-<em>Quercus</em> (<em>Cyclobalanopsis</em>) <em>schottkyana</em>
-All.</span></h2>
+<h2><span style="color: darkblue;"><em>Castanopsis
+orthacantha</em>-<em>Quercus</em> (<em>Cyclobalanopsis</em>)
+<em>schottkyana</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
