--- a/Alli-1a24.html
+++ b/Alli-1a24.html
@@ -280,11 +280,11 @@ $(document).ready(function () {
 <div id="高山锥-黄毛青冈群团" class="section level2">
 <h2><span style="color: blue;">高山锥-黄毛青冈群团</span></h2>
 </div>
-<div id="castanopsis-delavayi---quercus-cyclobalanopsis-delavayi-all."
+<div id="castanopsis-delavayi-quercus-cyclobalanopsis-delavayi-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis delavayi</em> -
-<em>Quercus</em> (<em>Cyclobalanopsis</em>) <em>delavayi</em>
-All.</span></h2>
+<h2><span style="color: darkblue;"><em>Castanopsis
+delavayi</em>-<em>Quercus</em> (<em>Cyclobalanopsis</em>)
+<em>delavayi</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
