--- a/Alli-1a26.html
+++ b/Alli-1a26.html
@@ -280,14 +280,14 @@ $(document).ready(function () {
 <div id="白穗柯-麻子壳柯群团" class="section level2">
 <h2><span style="color: blue;">白穗柯-麻子壳柯群团</span></h2>
 </div>
-<div id="lithocarpus-craibianus---l.-variolosus-all."
+<div id="lithocarpus-craibianus-l.-variolosus-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Lithocarpus craibianus</em> -
-<em>L. variolosus</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Lithocarpus
+craibianus</em>-<em>L. variolosus</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>白穗柯（<em>Lithocarpus craibianus</em>）和麻子壳柯（<em>L.
+<p>白穗柯（<em>Lithocarpus craibianus</em>）和麻子壳柯（<em>Lithocarpus
 variolosus</em>），兼为鉴别种</p>
 <p><br></p>
 </div>
@@ -297,17 +297,17 @@ variolosus</em>），兼为鉴别种</p>
 <li><p>乔木层：滇青冈（<em>Cyclobalanopsis
 glaucoides</em>）、云南冬青（<em>Ilex
 yunnanensis</em>）、掌叶梁王茶（<em>Nothopanax
-delavayi</em>）、五加属一种（<em>Acanthopanax</em>
-sp.），此外一些立地中，高山栎类和一些温带起源的落叶树种常见，如：川西栎（<em>Quercus
+delavayi</em>）、五加属（<em>Acanthopanax
+spp.</em>），此外一些立地中，高山栎类和一些温带起源的落叶树种常见，如：川西栎（<em>Quercus
 gilliana</em>）、杈叶槭（<em>Acer robustum</em>）、疏花槭（<em>Acer
 laxiflorum</em>）、滇腊瓣花（<em>Corylopsis yunnanensis</em>）</p></li>
 <li><p>灌木层：水红木（<em>Viburnum
 cylindricum</em>）、针齿铁仔（<em>Myrsine
 semiserrata</em>）、箭竹一种（<em>Fargesia</em>
-sp.）、木姜子一种（<em>Litsea</em> sp.）、山茶属一种（<em>Camellia</em>
-sp.）、多种杜鹃（<em>Rhododendron</em> spp.）、 豪猪刺（<em>Berberis
-julianae</em>）、窄叶西南红山茶（<em>Camellia pitardii var.
-yunnanica</em>）</p></li>
+sp.）、木姜子一种（<em>Litsea spp.</em>）、山茶属一种（<em>Camellia
+spp.</em>）、多种杜鹃（<em>Rhododendron spp.</em>）、
+豪猪刺（<em>Berberis julianae</em>）、窄叶西南红山茶（<em>Camellia
+pitardii var. yunnanica</em>）</p></li>
 <li><p>草本层：吉祥草（<em>Reineckia carnea</em>）、凤尾蕨（<em>Pteris
 cretica var. nervosa</em>）、宽叶兔儿风（<em>Ainsliaea
 latifolia</em>）、一把伞南星（<em>Arisaema erubescens</em>）</p></li>
