--- a/Alli-1a27.html
+++ b/Alli-1a27.html
@@ -280,14 +280,14 @@ $(document).ready(function () {
 <div id="刺壳柯-壶壳柯群团" class="section level2">
 <h2><span style="color: blue;">刺壳柯-壶壳柯群团</span></h2>
 </div>
-<div id="lithocarpus-echinotholus---l.-echinophorus-all."
+<div id="lithocarpus-echinotholus-l.-echinophorus-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Lithocarpus echinotholus</em> -
-<em>L. echinophorus</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Lithocarpus
+echinotholus</em>-<em>L. echinophorus</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>刺壳柯（<em>Lithocarpus echinotholus</em>）、壶壳柯（<em>L.
+<p>刺壳柯（<em>Lithocarpus echinotholus</em>）、壶壳柯（<em>Lithocarpus
 echinophorus</em>）</p>
 <p><br></p>
 </div>
