--- a/Alli-1a28.html
+++ b/Alli-1a28.html
@@ -280,15 +280,16 @@ $(document).ready(function () {
 <div id="木果柯-水仙柯-截果柯群团" class="section level2">
 <h2><span style="color: blue;">木果柯-水仙柯-截果柯群团</span></h2>
 </div>
-<div id="lithocarpus-xylocarpus---l.-naiadarum---l.-truncatus-all."
+<div id="lithocarpus-xylocarpus-l.-naiadarum-l.-truncatus-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Lithocarpus xylocarpus</em> -
-<em>L. naiadarum</em> - <em>L. truncatus</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Lithocarpus
+xylocarpus</em>-<em>L. naiadarum</em>-<em>L. truncatus</em>
+All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>木果柯（<em>Lithocarpus xylocarpus</em>）、水仙柯（<em>L.
-naiadarum</em>）、截果柯（<em>L. truncatus</em>）</p>
+<p>木果柯（<em>Lithocarpus xylocarpus</em>）、水仙柯（<em>Lithocarpus
+naiadarum</em>）、截果柯（<em>Lithocarpus truncatus</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
