--- a/Alli-1a29.html
+++ b/Alli-1a29.html
@@ -282,12 +282,12 @@ $(document).ready(function () {
 style="color: blue;">薄片青冈-独龙江青冈-通麦栎-西藏栎群团</span></h2>
 </div>
 <div
-id="quercus-lamellosa---q.-kiukiangensis---q.-cyclobalanopsis-lanata---q.-cyclobalanopsis-lodicosa-all."
+id="quercus-lamellosa-q.-kiukiangensis-q.-cyclobalanopsis-lanata-q.-cyclobalanopsis-lodicosa-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Quercus lamellosa</em> - <em>Q.
-kiukiangensis</em> - <em>Q.</em> (<em>Cyclobalanopsis</em>)
-<em>lanata</em> - <em>Q.</em> (<em>Cyclobalanopsis</em>)
-<em>lodicosa</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Quercus lamellosa</em>-<em>Q.
+kiukiangensis</em>-<em>Q.</em> (<em>Cyclobalanopsis</em>)
+<em>lanata</em>-<em>Q.</em> (<em>Cyclobalanopsis</em>) <em>lodicosa</em>
+All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
