--- a/Alli-1a3.html
+++ b/Alli-1a3.html
@@ -10,9 +10,8 @@
 
 
 
-<meta name="date" content="2025-04-02" />
 
-<title>Alli-1a3.knit</title>
+<title> </title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -273,6 +272,7 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore"> </h1>
 
 </div>
 
@@ -281,10 +281,10 @@ $(document).ready(function () {
 <h2><span style="color: blue;">云山青冈-细叶青冈群团</span></h2>
 </div>
 <div
-id="quercus-cyclobalanopsis-sessilifolia---q.-cyclobalanopsis-ciliaris-all."
+id="quercus-cyclobalanopsis-sessilifolia-q.-cyclobalanopsis-ciliaris-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>sessilifolia</em> - <em>Q.</em>
+(<em>Cyclobalanopsis</em>) <em>sessilifolia</em>-<em>Q.</em>
 (<em>Cyclobalanopsis</em>) <em>ciliaris</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
