--- a/Alli-1a30.html
+++ b/Alli-1a30.html
@@ -281,23 +281,25 @@ $(document).ready(function () {
 <h2><span style="color: blue;">台湾窄叶青冈-台湾青冈群团</span></h2>
 </div>
 <div
-id="quercus-cyclobalanopsis-stenophylloides---q.-cyclobalanopsis-morii-all."
+id="quercus-cyclobalanopsis-stenophylloides-q.-cyclobalanopsis-morii-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>stenophylloides</em> - Q.
+(<em>Cyclobalanopsis</em>) <em>stenophylloides</em>-<em>Q.</em>
 (<em>Cyclobalanopsis</em>) <em>morii</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
 <p>台湾窄叶青冈（<em>Cyclobalanopsis
-stenophylloides</em>）、台湾青冈（<em>C.
+stenophylloides</em>）、台湾青冈（<em>Cyclobalanopsis
 morii</em>），同时也是鉴别种</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：昆栏树（<em>Trochodendron
+<li><p>乔木层：台湾窄叶青冈（<em>Cyclobalanopsis
+stenophylloides</em>）、台湾青冈（<em>Cyclobalanopsis
+morii</em>）、昆栏树（<em>Trochodendron
 aralioides</em>）、尖叶新木姜子（<em>Neolitsea
 acuminatissima</em>）、光柃（<em>Eurya
 glaberrima</em>）、台湾铁杉（<em>Tsuga chinensis var.
