--- a/Alli-1a31.html
+++ b/Alli-1a31.html
@@ -281,23 +281,25 @@ $(document).ready(function () {
 <h2><span style="color: blue;">云山青冈-长果青冈群团</span></h2>
 </div>
 <div
-id="quercus-cyclobalanopsis-sessilifolia---q.-cyclobalanopsis-longinux-all."
+id="quercus-cyclobalanopsis-sessilifolia-q.-cyclobalanopsis-longinux-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>sessilifolia</em> - <em>Q.</em>
+(<em>Cyclobalanopsis</em>) <em>sessilifolia</em>-<em>Q.</em>
 (<em>Cyclobalanopsis</em>) <em>longinux</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>长果青冈（<em>Q.</em> （<em>Cyclobalanopsis</em>）
-<em>longinux</em>）和云山青冈（<em>Quercus</em>
+<p>长果青冈（<em>Quercus</em> （<em>Cyclobalanopsis</em>）
+<em>longinux</em>）、云山青冈（<em>Quercus</em>
 （<em>Cyclobalanopsis</em>） <em>sessilifolia</em>），同时也是鉴别种</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：水丝梨（<em>Sycopsis
+<li><p>乔木层：长果青冈（<em>Quercus</em> （<em>Cyclobalanopsis</em>）
+<em>longinux</em>）、云山青冈（<em>Quercus</em>
+（<em>Cyclobalanopsis</em>） <em>sessilifolia</em>、水丝梨（<em>Sycopsis
 sinensis</em>）、腺叶桂樱（<em>Laurocerasus
 phaeosticta</em>）、长叶木姜子（<em>Litsea
 acuminata</em>）、台湾红榨槭（<em>Acer morrisonense</em>）</p></li>
