--- a/Alli-1a32.html
+++ b/Alli-1a32.html
@@ -280,18 +280,17 @@ $(document).ready(function () {
 <div id="南投黄肉楠-米槠群团" class="section level2">
 <h2><span style="color: blue;">南投黄肉楠-米槠群团</span></h2>
 </div>
-<div id="actinodaphne-litsea-acuminata---castanopsis-carlesii-all."
+<div id="actinodaphne-litsea-acuminata-castanopsis-carlesii-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Actinodaphne</em>
-(<em>Litsea</em>) <em>acuminata</em> - <em>Castanopsis carlesii</em>
+(<em>Litsea</em>) <em>acuminata</em>-<em>Castanopsis carlesii</em>
 All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>优势种兼为鉴别种除米槠（<em>Castanopsis
+<p>优势种兼为鉴别种，米槠（<em>Castanopsis
 carlesii</em>）、长叶木姜子（<em>Litsea
-acuminata</em>）外，可有木荷（<em>Schima
-superba</em>）、甜槠（<em>Castanopsis
+acuminata</em>）、木荷（<em>Schima superba</em>）、甜槠（<em>Castanopsis
 eyrei</em>）、台湾含笑（<em>Michelia compressa</em>）</p>
 <p><br></p>
 </div>
