--- a/Alli-1a33.html
+++ b/Alli-1a33.html
@@ -282,10 +282,10 @@ $(document).ready(function () {
 style="color: blue;">鬼石柯-油叶柯-杏叶柯-齿叶柯群团</span></h2>
 </div>
 <div
-id="lithocarpus-lepidocarpus---l.-konishii---l.-amygdalifolius---l.-kawakamii-all."
+id="lithocarpus-lepidocarpus-l.-konishii-l.-amygdalifolius-l.-kawakamii-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Lithocarpus lepidocarpus</em> -
-<em>L. konishii</em> - <em>L. amygdalifolius</em> - <em>L.
+<h2><span style="color: darkblue;"><em>Lithocarpus
+lepidocarpus</em>-<em>L. konishii</em>-<em>L. amygdalifolius</em>-<em>L.
 kawakamii</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
