--- a/Alli-1a34.html
+++ b/Alli-1a34.html
@@ -281,11 +281,11 @@ $(document).ready(function () {
 <h2><span style="color: blue;">沉水樟-台琼楠-润楠群团</span></h2>
 </div>
 <div
-id="cinnamomum-micranthum---beilschmiedia-erithrophloia---machilus-spp.-all."
+id="cinnamomum-micranthum-beilschmiedia-erithrophloia-machilus-spp.-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Cinnamomum micranthum</em> -
-<em>Beilschmiedia erithrophloia</em> - <em>Machilus</em> spp.
-All.</span></h2>
+<h2><span style="color: darkblue;"><em>Cinnamomum
+micranthum</em>-<em>Beilschmiedia erithrophloia</em>-<em>Machilus
+spp.</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
