--- a/Alli-1a4.html
+++ b/Alli-1a4.html
@@ -295,7 +295,8 @@ class="section level2">
 <ul>
 <li><p>乔木层：木荷（<em>Schima superba</em>）、港柯（<em>Lithocarpus
 harlandii</em>），树参（<em>Dendropanax
-dentiger</em>），红毒茴（<em>Illicium lanceolatum</em>）</p></li>
+dentiger</em>），红毒茴（<em>Illicium
+lanceolatum</em>）、褐叶青冈(<em>Quercus stewardiana</em>)</p></li>
 <li><p>灌木层：尖连蕊茶（<em>Camellia
 cuspidata</em>），鹿角杜鹃（<em>Rhododendron
 latoucheae</em>）、猴头杜鹃（<em>Rhododendron simiarum</em>）</p></li>
