--- a/Alli-1a5.html
+++ b/Alli-1a5.html
@@ -281,23 +281,25 @@ $(document).ready(function () {
 <h2><span style="color: blue;">曼青冈-多脉青冈群团</span></h2>
 </div>
 <div
-id="quercus-cyclobalanopsis-oxyodon---q.-cyclobalanopsis-multinervis-all."
+id="quercus-cyclobalanopsis-oxyodon-q.-cyclobalanopsis-multinervis-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Quercus</em>
-(<em>Cyclobalanopsis</em>) <em>oxyodon</em> - <em>Q.</em>
+(<em>Cyclobalanopsis</em>) <em>oxyodon</em>-<em>Q.</em>
 (<em>Cyclobalanopsis</em>) <em>multinervis</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
 <p>多脉青冈（<em>Cyclobalanopsis
 multinervis</em>）、曼青冈（<em>Cyclobalanopsis
-oxyodon</em>），它们同时也是鉴别种</p>
+oxyodon</em>），同时也是鉴别种</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：亮叶水青冈（<em>Fagus lucida</em>）、暖木（<em>Meliosma
+<li><p>乔木层：多脉青冈（<em>Cyclobalanopsis
+multinervis</em>）、曼青冈（<em>Cyclobalanopsis
+oxyodon</em>）、亮叶水青冈（<em>Fagus lucida</em>）、暖木（<em>Meliosma
 veitchiorum</em>）、秀丽槭（<em>Acer
 elegantulum</em>）、江南花楸（<em>Sorbus hemsleyi</em>）</p></li>
 <li><p>灌木层：尖连蕊茶（<em>Camellia
