--- a/Alli-1a6.html
+++ b/Alli-1a6.html
@@ -280,10 +280,10 @@ $(document).ready(function () {
 <div id="巴东栎-包果柯群团" class="section level2">
 <h2><span style="color: blue;">巴东栎-包果柯群团</span></h2>
 </div>
-<div id="quercus-engleriana---lithocarpus-cleistocarpus-all."
+<div id="quercus-engleriana-lithocarpus-cleistocarpus-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Quercus engleriana</em> -
-<em>Lithocarpus cleistocarpus</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Quercus
+engleriana</em>-<em>Lithocarpus cleistocarpus</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
@@ -294,7 +294,9 @@ cleistocarpus</em>），同时也是鉴别种</p>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：三脉水丝梨（<em>Sycopsis
+<li><p>乔木层：巴东栎(<em>Quercus
+engleriana</em>)、包果柯（<em>Lithocarpus
+cleistocarpus</em>）、三脉水丝梨（<em>Sycopsis
 triplinervia</em>）、冠萼花楸（<em>Sorbus
 coronata</em>）、南方铁杉(<em>Tsuga chinensis var.
 tchekiangensis</em>)、光叶珙桐(<em>Davidia involucrate var.
