--- a/Alli-1a7.html
+++ b/Alli-1a7.html
@@ -298,9 +298,16 @@ chrysocomus</em>），同时也是鉴别种</p>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：香港四照花（<em>Cornus
+<li><p>乔木层：灰柯（<em>Lithocarpus
+henryi</em>）、烟斗柯（<em>Lithocarpus
+corneus</em>）、美叶柯（<em>Lithocarpus
+calophyllus</em>）、泥柯（<em>Lithocarpus
+fenestratus</em>）、星毛柯（<em>Lithocarpus
+petelotii</em>）、硬壳柯（<em>Lithocarpus
+hancei</em>）、金毛柯（<em>Lithocarpus
+chrysocomus</em>）、香港四照花（<em>Cornus
 hongkongensis</em>）、大叶新木姜子（<em>Neolitsea
-levinei</em>），以及虎皮楠（<em>Daphniphyllum oldhami</em>）</p></li>
+levinei</em>）以及虎皮楠（<em>Daphniphyllum oldhami</em>）</p></li>
 <li><p>灌木层：黄丹木姜子（<em>Litsea elongata</em>）、细枝柃（<em>Eurya
 loquaiana</em>）、杜茎山（<em>Maesa japonica</em>）、赤楠（<em>Syzygium
 buxifolium</em>）、草珊瑚（<em>Sarcandra glabra</em>）</p></li>
