--- a/Alli-1a8.html
+++ b/Alli-1a8.html
@@ -280,10 +280,9 @@ $(document).ready(function () {
 <div id="木荷-甜槠群团" class="section level2">
 <h2><span style="color: blue;">木荷-甜槠群团</span></h2>
 </div>
-<div id="schima-superba---castanopsis-eyrei-all."
-class="section level2">
-<h2><span style="color: darkblue;"><em>Schima superba</em> -
-<em>Castanopsis eyrei</em> All.</span></h2>
+<div id="schima-superba-castanopsis-eyrei-all." class="section level2">
+<h2><span style="color: darkblue;"><em>Schima
+superba</em>-<em>Castanopsis eyrei</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
