--- a/Alli-1a9.html
+++ b/Alli-1a9.html
@@ -280,10 +280,9 @@ $(document).ready(function () {
 <div id="甜槠-银木荷群团" class="section level2">
 <h2><span style="color: blue;">甜槠-银木荷群团</span></h2>
 </div>
-<div id="castanopsis-eyrei---schima-argentea-all."
-class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis eyrei</em> -
-<em>Schima argentea</em> All.</span></h2>
+<div id="castanopsis-eyrei-schima-argentea-all." class="section level2">
+<h2><span style="color: darkblue;"><em>Castanopsis eyrei</em>-<em>Schima
+argentea</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
