--- a/Alli-2a36.html
+++ b/Alli-2a36.html
@@ -281,10 +281,10 @@ $(document).ready(function () {
 <h2><span style="color: blue;">大果马蹄荷-黏木-蕈树群团</span></h2>
 </div>
 <div
-id="exbucklandia-tonkinensis---ixonanthes-reticulata---liquidambar-altingia-chinensis-all."
+id="exbucklandia-tonkinensis-ixonanthes-reticulata-liquidambar-altingia-chinensis-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Exbucklandia tonkinensis</em> -
-<em>Ixonanthes reticulata</em> - <em>Liquidambar</em>
+<h2><span style="color: darkblue;"><em>Exbucklandia
+tonkinensis</em>-<em>Ixonanthes reticulata</em>-<em>Liquidambar</em>
 (<em>Altingia</em>) <em>chinensis</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
@@ -292,7 +292,7 @@ class="section level2">
 <p>蕈树（<em>Liquidambar</em> (<em>Altingia</em>)
 <em>chinensis</em>）、大果马蹄荷（<em>Exbucklandia
 tonkinensis</em>）、粘木（<em>Ixonanthes
-reticulata</em>），它们同时也可作为鉴别种</p>
+reticulata</em>），同时也可作为鉴别种</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
