--- a/Alli-2a39.html
+++ b/Alli-2a39.html
@@ -280,11 +280,10 @@ $(document).ready(function () {
 <div id="大叶新木姜子-黄樟-樟群团" class="section level2">
 <h2><span style="color: blue;">大叶新木姜子-黄樟-樟群团</span></h2>
 </div>
-<div
-id="neolitsea-levinei---cinnamomum-parthenoxylon---c.-camphora-all."
+<div id="neolitsea-levinei-cinnamomum-parthenoxylon-c.-camphora-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Neolitsea levinei</em> -
-<em>Cinnamomum parthenoxylon</em> - <em>C. camphora</em>
+<h2><span style="color: darkblue;"><em>Neolitsea
+levinei</em>-<em>Cinnamomum parthenoxylon</em>-<em>C. camphora</em>
 All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
