--- a/Alli-2a40.html
+++ b/Alli-2a40.html
@@ -280,11 +280,11 @@ $(document).ready(function () {
 <div id="琼楠-润楠-华润楠群团" class="section level2">
 <h2><span style="color: blue;">琼楠-润楠-华润楠群团</span></h2>
 </div>
-<div
-id="beilschmiedia-intermedia---machilus-spp.---machilus-chinensis-all."
+<div id="beilschmiedia-intermedia-machilus-spp.-machilus-chinensis-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Beilschmiedia intermedia</em> -
-<em>Machilus</em> spp. - <em>Machilus chinensis</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Beilschmiedia
+intermedia</em>-<em>Machilus spp.</em>-<em>Machilus chinensis</em>
+All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
