--- a/Alli-2a41.html
+++ b/Alli-2a41.html
@@ -281,15 +281,15 @@ $(document).ready(function () {
 <h2><span style="color: blue;">鹅掌柴-假苹婆-红楠群团</span></h2>
 </div>
 <div
-id="heptapleurum-heptaphyllum---sterculia-lanceolata---machilus-thunbergii-all."
+id="heptapleurum-heptaphyllum-sterculia-lanceolata-machilus-thunbergii-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Heptapleurum heptaphyllum</em> -
-<em>Sterculia lanceolata</em> - <em>Machilus thunbergii</em>
-All.</span></h2>
+<h2><span style="color: darkblue;"><em>Heptapleurum
+heptaphyllum</em>-<em>Sterculia lanceolata</em>-<em>Machilus
+thunbergii</em> All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>红楠（<em>Machilus thunbergii</em>）和广东润楠（<em>Machilus
+<p>红楠（<em>Machilus thunbergii</em>）、广东润楠（<em>Machilus
 kwangtungensis</em>）</p>
 <p><br></p>
 </div>
@@ -301,8 +301,9 @@ lanceolata</em>）、鹅掌柴（<em>Schefflera
 octophylla</em>）、肉实树（<em>Sarcosperma
 laurinum</em>）、黄樟（<em>Cinnamomum
 porrectum</em>）、山杜英（<em>Elaeocarpus
-sylvestris</em>）、短序润楠（<em>Machilus breviflora</em>）、
-山油柑（<em>Acronychia pedunculata</em>）、华润楠（<em>Machilus
+sylvestris</em>）、短序润楠（<em>Machilus
+breviflora</em>）、山油柑（<em>Acronychia
+pedunculata</em>）、华润楠（<em>Machilus
 chinensis</em>）、罗浮柿（<em>Diospyros
 morrisiana</em>）、山杜英（<em>Elaeocarpus
 sylvestris</em>）、笔罗子（<em>Meliosma
