--- a/Alli-2a42.html
+++ b/Alli-2a42.html
@@ -280,15 +280,17 @@ $(document).ready(function () {
 <div id="西南木荷-印锥-红锥群团" class="section level2">
 <h2><span style="color: blue;">西南木荷-印锥-红锥群团</span></h2>
 </div>
-<div id="schima-wallichii---castanopsis-indica---c.-hystrix-all."
+<div id="schima-wallichii-castanopsis-indica-c.-hystrix-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Schima wallichii</em> -
-<em>Castanopsis indica</em> - <em>C. hystrix</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Schima
+wallichii</em>-<em>Castanopsis indica</em>-<em>C. hystrix</em>
+All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>红锥（<em>Castanopsis
-hystrix</em>）、印锥、西南木荷、截果柯（<em>Lithocarpus
+<p>红锥（<em>Castanopsis hystrix</em>）、印锥（<em>Castanopsis
+indica</em>）、西南木荷（<em>Schima
+wallichii</em>）、截果柯（<em>Lithocarpus
 truncatus</em>）、小果锥（<em>Castanopsis fleuryi</em>）</p>
 <p><br></p>
 </div>
