--- a/Alli-2a43.html
+++ b/Alli-2a43.html
@@ -280,10 +280,10 @@ $(document).ready(function () {
 <div id="栲-秃枝润楠群团" class="section level2">
 <h2><span style="color: blue;">栲-秃枝润楠群团</span></h2>
 </div>
-<div id="castanopsis-fargesii---machilus-kurzi-all."
+<div id="castanopsis-fargesii-machilus-kurzi-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis fargesii</em> -
-<em>Machilus kurzi</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Castanopsis
+fargesii</em>-<em>Machilus kurzi</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
