--- a/Alli-2a44.html
+++ b/Alli-2a44.html
@@ -281,11 +281,11 @@ $(document).ready(function () {
 <h2><span style="color: blue;">细青皮-红锥-短刺锥群团</span></h2>
 </div>
 <div
-id="liquidambar-altingia-excelsa---castanopsis-hystrix---c.-echinocarpa-all."
+id="liquidambar-altingia-excelsa-castanopsis-hystrix-c.-echinocarpa-all."
 class="section level2">
 <h2><span style="color: darkblue;"><em>Liquidambar</em>
-(<em>Altingia</em>) <em>excelsa</em> - <em>Castanopsis hystrix</em> -
-<em>C. echinocarpa</em> All.</span></h2>
+(<em>Altingia</em>) <em>excelsa</em>-<em>Castanopsis hystrix</em>-<em>C.
+echinocarpa</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
