--- a/Alli-2a45.html
+++ b/Alli-2a45.html
@@ -281,11 +281,11 @@ $(document).ready(function () {
 <h2><span style="color: blue;">米槠-白校攒-淋漓锥群团</span></h2>
 </div>
 <div
-id="castanopsis-carlesii---castanopsis-carlesii-var.-carlesii-f.-sessilis---lithocarpus-castanopsis-uraianus-all."
+id="castanopsis-carlesii-castanopsis-carlesii-var.-carlesii-f.-sessilis--lithocarpus-castanopsis-uraianus-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Castanopsis carlesii</em> -
-<em>Castanopsis carlesii var. carlesii f. sessilis</em> -
-<em>Lithocarpus</em> (<em>Castanopsis</em>) <em>uraianus</em>
+<h2><span style="color: darkblue;"><em>Castanopsis
+carlesii</em>-<em>Castanopsis carlesii var. carlesii f. sessilis</em>
+-<em>Lithocarpus</em> (<em>Castanopsis</em>) <em>uraianus</em>
 All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
@@ -307,7 +307,7 @@ chinensis</em>）、台湾山龙眼（<em>Helicia formosana</em>）</p></li>
 quinquegona</em>）、柏拉木（<em>Blastus
 cochinchinensis</em>）、白楸（<em>Mallotus
 paniculatus</em>）、多枝紫金牛（<em>Ardisia
-sieboldii</em>），亮叶猴耳环（<em>Pithecellobium lucidum</em>）</p></li>
+sieboldii</em>）、亮叶猴耳环（<em>Pithecellobium lucidum</em>）</p></li>
 <li><p>草本层：山姜（<em>Alpinia japonica</em>）、双盖蕨（<em>Diplazium
 donianum</em>）、大黄花虾脊兰（<em>Calanthe sieboldii</em>）</p></li>
 <li><p>藤本植物：黄藤（<em>Daemonorops
