--- a/Alli-2a46.html
+++ b/Alli-2a46.html
@@ -281,11 +281,11 @@ $(document).ready(function () {
 <h2><span style="color: blue;">香润楠-山龙眼-疏脉山香园群团</span></h2>
 </div>
 <div
-id="machilus-zuihoensis---helicia-formosana---staphylea-indochinensis-all."
+id="machilus-zuihoensis-helicia-formosana-staphylea-indochinensis-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Machilus zuihoensis</em> -
-<em>Helicia formosana</em> - <em>Staphylea indochinensis</em>
-All.</span></h2>
+<h2><span style="color: darkblue;"><em>Machilus
+zuihoensis</em>-<em>Helicia formosana</em>-<em>Staphylea
+indochinensis</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
