--- a/Alli-2a48.html
+++ b/Alli-2a48.html
@@ -282,19 +282,18 @@ $(document).ready(function () {
 style="color: blue;">山榄-大头茶-罗浮锥-港口木荷群团</span></h2>
 </div>
 <div
-id="planchonella-obovata---polyspora-axillaris---castanopsis-fabri---schima-superba-var.-kankoensis-all."
+id="planchonella-obovata-polyspora-axillaris-castanopsis-fabri-schima-superba-var.-kankoensis-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Planchonella obovata</em> -
-<em>Polyspora axillaris</em> - <em>Castanopsis fabri</em> - <em>Schima
-superba</em> var. <em>kankoensis</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Planchonella
+obovata</em>-<em>Polyspora axillaris</em>-<em>Castanopsis
+fabri</em>-<em>Schima superba var. kankoensis</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
 <p>港口木荷（<em>Schima superba var.
 kankaoensis</em>）、大头茶（<em>Gordonia
 axillaris</em>）、星刺锥（<em>Castanopsis
-stellato</em>-<em>spina</em>）、山榄（<em>Planchonella
-obovata</em>）</p>
+stellato-spina</em>）、山榄（<em>Planchonella obovata</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
