--- a/Alli-3a50.html
+++ b/Alli-3a50.html
@@ -280,8 +280,8 @@ $(document).ready(function () {
 <div id="山蒲桃-红鳞蒲桃群团" class="section level2">
 <h2><span style="color: blue;">山蒲桃-红鳞蒲桃群团</span></h2>
 </div>
-<div id="syzygium-levinei---s.-hancei-all." class="section level2">
-<h2><span style="color: darkblue;"><em>Syzygium levinei</em> - <em>S.
+<div id="syzygium-levinei-s.-hancei-all." class="section level2">
+<h2><span style="color: darkblue;"><em>Syzygium levinei</em>-<em>S.
 hancei</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
