--- a/Alli-3a53.html
+++ b/Alli-3a53.html
@@ -281,10 +281,10 @@ $(document).ready(function () {
 <h2><span style="color: blue;">黄桐-土沉香-假苹婆群团</span></h2>
 </div>
 <div
-id="endospermum-chinense---aquilaria-sinensis---sterculia-lanceolata-all."
+id="endospermum-chinense-aquilaria-sinensis-sterculia-lanceolata-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Endospermum chinense</em> -
-<em>Aquilaria sinensis</em> - <em>Sterculia lanceolata</em>
+<h2><span style="color: darkblue;"><em>Endospermum
+chinense</em>-<em>Aquilaria sinensis</em>-<em>Sterculia lanceolata</em>
 All.</span></h2>
 <p><br></p>
 <div id="优势种" class="section level3">
