--- a/Alli-3a55.html
+++ b/Alli-3a55.html
@@ -280,15 +280,15 @@ $(document).ready(function () {
 <div id="盆架树-红锥群团" class="section level2">
 <h2><span style="color: blue;">盆架树-红锥群团</span></h2>
 </div>
-<div id="alstonia-rostrata---castanopsis-hystrix-all."
+<div id="alstonia-rostrata-castanopsis-hystrix-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Alstonia rostrata</em> -
-<em>Castanopsis hystrix</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Alstonia
+rostrata</em>-<em>Castanopsis hystrix</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
 <p>红锥（<em>Castanopsis hystrix</em>）、盆架树（<em>Alstonia
-pachucarpa</em> = <em>Winchia calophylla</em>）</p>
+rostrata</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
@@ -307,15 +307,15 @@ angustifolia</em>）、银叶巴豆（<em>Croton
 cascarilloides</em>）、乔木紫金牛（<em>Ardisia
 arborescens</em>）、东方水锦树（<em>Wendlandia tinctoria</em> subsp.
 <em>orientalis</em>）</p></li>
-<li><p>草本层：山姜一种（<em>Alpinia</em> sp.）、柊叶（<em>Phrynium
+<li><p>草本层：山姜属（<em>Alpinia spp.</em>）、柊叶（<em>Phrynium
 capitatum</em>）、长叶实蕨（<em>Bolbitis
 heteroclita</em>）、矮棕（<em>Didymosperma nanum</em>）</p></li>
 <li><p>藤本植物：独子藤（<em>Celastrus
 monospermus</em>）、藤枣（<em>Eleutharrhena
-macrocarpa</em>）、崖豆藤一种（<em>Millettia</em>
-sp.）、粉背菝葜（<em>Smilax
-hypoglauca</em>）、瓜馥木一种（<em>Fissistigma</em>
-sp.）、崖爬藤一种（<em>Tetrastigma</em> sp.）</p></li>
+macrocarpa</em>）、崖豆藤属（<em>Millettia
+spp.</em>）、粉背菝葜（<em>Smilax
+hypoglauca</em>）、瓜馥木属（<em>Fissistigma
+spp.</em>）、崖爬藤属（<em>Tetrastigma spp.</em>）</p></li>
 </ul>
 <p><br></p>
 </div>
