--- a/Alli-3a56.html
+++ b/Alli-3a56.html
@@ -280,11 +280,11 @@ $(document).ready(function () {
 <div id="川滇木莲-栎子青冈群团" class="section level2">
 <h2><span style="color: blue;">川滇木莲-栎子青冈群团</span></h2>
 </div>
-<div id="magnolia-duclouxii---quercus-cyclobalanopsis-blakei-all."
+<div id="magnolia-duclouxii-quercus-cyclobalanopsis-blakei-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Magnolia duclouxii</em> -
-<em>Quercus</em> (<em>Cyclobalanopsis</em>) <em>blakei</em>
-All.</span></h2>
+<h2><span style="color: darkblue;"><em>Magnolia
+duclouxii</em>-<em>Quercus</em> (<em>Cyclobalanopsis</em>)
+<em>blakei</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
