--- a/Alli-3a57.html
+++ b/Alli-3a57.html
@@ -281,29 +281,30 @@ $(document).ready(function () {
 <h2><span
 style="color: blue;">山棕-菲律宾榕-长叶润楠（大叶润楠）群团</span></h2>
 </div>
-<div id="arenga-engleri---ficus-ampelos---machilus-japonica-all."
+<div id="arenga-engleri-ficus-ampelos-machilus-japonica-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Arenga engleri</em> - <em>Ficus
-ampelos</em> - <em>Machilus japonica</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Arenga engleri</em>-<em>Ficus
+ampelos</em>-<em>Machilus japonica</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>除大叶楠（<em>Machilus kusanoi</em>）、数种榕属植物（糙叶榕<em>Ficus
-irisana</em>、稜果榕<em>F. septica</em>、水同木<em>F.
-Fistulosa</em>、菲律宾榕<em>F. Ampelas</em>、岛榕<em>F.
-Virgata</em>）外，还有山棕（<em>Arenga
-engleri</em>），以及三叶山香圆（<em>Turpinia
+<p>大叶楠（<em>Machilus kusanoi</em>）、数种榕属植物（糙叶榕<em>Ficus
+irisana</em>、稜果榕<em>Ficus septica</em>、水同木<em>Ficus
+Fistulosa</em>、菲律宾榕<em>Ficus Ampelas</em>、岛榕<em>Ficus
+Virgata</em>）、山棕（<em>Arenga
+engleri</em>）、三叶山香圆（<em>Turpinia
 ternata</em>）、台湾山香圆（<em>Turpinia
 formosana</em>）、墨鳞（<em>Melanolepis
 multiglandulosa</em>）、樟树（<em>Cinnamomum
 camphora</em>）、菜豆树（<em>Melanolepis
-multiglandulosa</em>），其中大叶楠、糙叶榕、山棕又是鉴别种。</p>
+multiglandulosa</em>），其中大叶楠、糙叶榕、山棕又是鉴别种</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
-<li><p>乔木层：台湾榕（<em>Ficus
+<li><p>乔木层：大叶楠（<em>Machilus kusanoi</em>）、糙叶榕<em>Ficus
+irisana</em>、山棕（<em>Arenga engleri</em>）、台湾榕（<em>Ficus
 formosana</em>）、南紫薇（<em>Lagerstroemia
 subcostata</em>）、鹅掌柴（<em>Schefflera octophylla</em>）</p></li>
 <li><p>灌木层：九节木（<em>Psychotria
