--- a/Alli-3a51.html
+++ b/Alli-3a51.html
@@ -280,10 +280,9 @@ $(document).ready(function () {
 <div id="鱼尾葵-水翁蒲桃群团" class="section level2">
 <h2><span style="color: blue;">鱼尾葵-水翁蒲桃群团</span></h2>
 </div>
-<div id="caryota-maxima---syzygium-nervosum-all."
-class="section level2">
-<h2><span style="color: darkblue;"><em>Caryota maxima</em> -
-<em>Syzygium nervosum</em> All.</span></h2>
+<div id="caryota-maxima-syzygium-nervosum-all." class="section level2">
+<h2><span style="color: darkblue;"><em>Caryota maxima</em>-<em>Syzygium
+nervosum</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
