--- a/Alli-3a54.html
+++ b/Alli-3a54.html
@@ -280,10 +280,10 @@ $(document).ready(function () {
 <div id="球壳柯-厚鳞柯群团" class="section level2">
 <h2><span style="color: blue;">球壳柯-厚鳞柯群团</span></h2>
 </div>
-<div id="lithocarpus-sphaerocarpus---l.-pachylepis-all."
+<div id="lithocarpus-sphaerocarpus-l.-pachylepis-all."
 class="section level2">
-<h2><span style="color: darkblue;"><em>Lithocarpus sphaerocarpus</em> -
-<em>L. pachylepis</em> All.</span></h2>
+<h2><span style="color: darkblue;"><em>Lithocarpus
+sphaerocarpus</em>-<em>L. pachylepis</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
